<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<data>

    <variable
        name="mainActivityVm"
        type="com.star.quickezeclient.location.viewmodal.MainActivityVm"/>
</data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:layout_marginTop="50dp"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@drawable/logo"/>


            <android.support.v7.widget.FitWindowsFrameLayout
                android:layout_marginTop="50dp"
                android:id="@+id/newsCardView"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/topbackground">


            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:background="@drawable/locationlogo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/where_do_want_service"/>


                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:text="@string/at_my_current_location"
                    android:onClick="@{mainActivityVm::onClickcurrentLation}"
                    android:background="@drawable/button_background"
                    android:gravity="center"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:text="@string/search_service_location"
                    android:gravity="center"/>


            </LinearLayout>

            </android.support.v7.widget.FitWindowsFrameLayout>



        </LinearLayout>



    </android.support.design.widget.CoordinatorLayout>


</layout>